--- a/_includes/custom/people_grid.html
+++ b/_includes/custom/people_grid.html
@@ -3,25 +3,24 @@
 {%- if people.size > 0 -%}
 <div>
   {%- if include.title -%}
-  <h2 class="post-list-heading">{{ include.title }}</h2>
+    <h2 class="post-list-heading">{{ include.title }}</h2>
   {%- endif -%}
-
   <div>
     {%- for person in people -%}
-    <a class="lab" href="{{ person.webpage | relative_url }}">
+    <a class="person" href="{{ person.webpage | relative_url }}">
       {%- if person.photo -%}
         {% assign photo_url = '/assets/images/people/' | append: person.photo %}
         <img class="photo" src="{{ photo_url }}" alt="{{ person.name }}"/>
       {%- else -%}
-      <div style="width: 200px; height: 200px"></div>
+        <div class="photo"></div>
       {%- endif -%}
-      <div class="content">
-        <div class="prof">{{ person.name }}</div>
-        <span>{{ person.title }}<br/>{{ person.department }}</span>
+      <div>
+        {{ person.name }}<br>
+        {{ person.title }}<br>
+        {{ person.department }}
       </div>
     </a>
     {%- endfor -%}
   </div>
 </div>
-
 {%- endif -%}
