--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,3 +1,7 @@
+---
+---
+
+@import "minima";
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:100,400);
 
 body {
@@ -10,17 +14,15 @@ a {
   color: #8c1515;
 }
 
+.wrapper {
+  max-width: 1600px;
+}
+
 .photo {
   border-radius: 100%;
   width: 200px;
   height: 200px;
   margin-bottom: 1rem;
-}
-
-.main {
-  max-width: 1200pt;
-  margin: auto;
-  text-align: center;
 }
 
 .person {
