--- a/assets/main.scss
+++ b/assets/main.scss
@@ -10,14 +10,10 @@ body {
   margin: 0;
 }
 
-a, a:visited { color: #8c1515; }
-
-.site-header { border-top: 5px solid #8c1515; }
-
-.site-title, .site-title:visited { color: #8c1515; }
-
-.site-footer { border-top: 1px solid #8c1515; }
-
+a, a:visited { color: #A6192E; }
+.site-header { border-top: 5px solid #A6192E; }
+.site-title, .site-title:visited { color: #A6192E; }
+.site-footer { border-top: 1px solid #A6192E; }
 .wrapper { max-width: 1600px; }
 
 .photo {
