--- a/assets/main.scss
+++ b/assets/main.scss
@@ -16,6 +16,31 @@ a, a:visited { color: #A6192E; }
 .site-footer { border-top: 1px solid #A6192E; }
 .wrapper { max-width: 1600px; }
 
+.site-title::before {
+  content: url("/assets/vinci-32.png");
+  display: inline-block;
+  position: relative;
+  width: 40px;
+  top: 8px;
+  right: 8px;
+}
+
+mark.red {
+  color: #A6192E;
+  font-weight: bolder;
+  background: none;
+}
+
+.tag {
+  font-family: monospace;
+  color: white;
+  font-weight: bolder;
+  background: #A6192E;
+  border-radius: 0.2rem;
+  vertical-align: baseline;
+  padding: 0.05em 0.2em;
+}
+
 .photo {
   border-radius: 100%;
   width: 200px;
