--- a/assets/main.scss
+++ b/assets/main.scss
@@ -25,6 +25,11 @@ a, a:visited { color: #A6192E; }
   right: 8px;
 }
 
+.title-image {
+  width: 800px;
+  margin: 0 auto;
+}
+
 mark.red {
   color: #A6192E;
   font-weight: bolder;
