--- a/_includes/custom/about.html
+++ b/_includes/custom/about.html
@@ -8,13 +8,13 @@
 </h2>
 
 The Visual and Interactive Computing Institute (VINCI) is a new institute at Simon Fraser University (SFU) that brings together faculty from various departments to collaborate on research and education in the areas of visual computing, interactive computing, social implications, and domain-specific applications.
-Our members cover a wide range of research areas, including:
-- <mark class="tag">VC</mark> : Visual Computing (graphics, vision, AI/ML, mathematical modeling, etc.)
-- <mark class="tag">IC</mark> : Interactive Computing (HCI, visualization, human-centred design, etc.)
-- <mark class="tag">SI</mark> : Social Implications (digital media, ethics, policy, philosophy, governance, etc.)
-- <mark class="tag">DA</mark> : Domain-Specific Applications (languages, health, music, learning, business, history, etc.)
+
+<h2>Institute purpose</h2>
+
+Computing technology plays an increasingly more important role in our society. VINCI aims to create collective wisdom, helping us to understand how computing technology could impact society in a positive way while mitigating harm to people of all abilities, genders, races, ages, and backgrounds. VINCI seeks to scale up and support research in visual and interactive computing and surrounding areas at SFU. The Institute cultivates a "research networking" infrastructure that connects VINCI-related academic and industrial institutions in the greater Vancouver area as well as across Canada. The Institute aids in building a capacity to train highly qualified personnel related to visual and interactive computing skills at all levels, whether the trainees are university students or company employees, in an environment that includes a wide range of visual and interactive computing tools along with access to the best practices in the field.
 
 {% assign directors = site.data.people | where: "tags", "co-director" %}
 {% include custom/people_grid.html people=directors title="Co-directors" %}
 
-{% include custom/people_grid.html people=site.data.people title="Members" %}
+{% assign scom = site.data.people | where_exp: "item", "item.tags contains 'steering committee'" %}
+{% include custom/people_grid.html people=scom title="Steering Committee" %}
