factorize out legend, and add research areas summary to about page

--- a/_includes/custom/about.html
+++ b/_includes/custom/about.html
@@ -13,6 +13,10 @@ The Visual and Interactive Computing Institute (VINCI) is a new institute at Sim
 
 Computing technology plays an increasingly more important role in our society. VINCI aims to create collective wisdom, helping us to understand how computing technology could impact society in a positive way while mitigating harm to people of all abilities, genders, races, ages, and backgrounds. VINCI seeks to scale up and support research in visual and interactive computing and surrounding areas at SFU. The Institute cultivates a "research networking" infrastructure that connects VINCI-related academic and industrial institutions in the greater Vancouver area as well as across Canada. The Institute aids in building a capacity to train highly qualified personnel related to visual and interactive computing skills at all levels, whether the trainees are university students or company employees, in an environment that includes a wide range of visual and interactive computing tools along with access to the best practices in the field.
 
+<h2>Institute research areas of focus</h2>
+
+{% include custom/legend.html %}
+
 {% assign directors = site.data.people | where: "tags", "co-director" %}
 {% include custom/people_grid.html people=directors title="Co-directors" %}
 
