apply different colors to research area tags

--- a/_includes/custom/people_grid.html
+++ b/_includes/custom/people_grid.html
@@ -24,7 +24,7 @@
         <br>
         {%- assign areas = person.area | split: "," -%}
         {% for area in areas %}
-          <mark class="tag">{{ area }}</mark>
+          <mark class="tag-{{ area }}">{{ area }}</mark>
         {% endfor %}
         <!-- <br>{{ person.tags }} -->
       </div>
