change to wide title image

--- a/_includes/custom/about.html
+++ b/_includes/custom/about.html
@@ -1,4 +1,4 @@
-<img class="title-image" src="assets/sfu-burnaby-campus.jpg">
+<img class="title-image" src="assets/title.png">
 
 <h2>
   <mark class="red">VINCI</mark> is a research institute at SFU focusing on
