Minor update to event template

--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -19,7 +19,7 @@ layout: post
   {%- if page.talk -%}
     <div><b>Talk Title</b>: {{page.talk.title}}<br/><br/></div>
     {%- if page.talk.video -%}
-      <div><a href="{{page.talk.video}}">[View Seminar Recording]</a><br/><br/></div>
+      <div><a href="{{page.talk.video}}">View Seminar Recording</a><br/><br/></div>
     {%- endif -%}  
 
     {%- if page.talk.abstract -%}
