--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -16,18 +16,12 @@ layout: post
   {%- if page.location -%}
     <div><b>Location</b>: {{page.location}}<br/><br/></div>
   {%- endif -%}  
-  {%- if page.talk -%}
-    <div><b>Talk Title</b>: {{page.talk.title}}<br/><br/></div>
-    {%- if page.talk.video -%}
-      <div><a href="{{page.talk.video}}">View Seminar Recording</a><br/><br/></div>
-    {%- endif -%}  
 
-    {%- if page.talk.abstract -%}
-      <div><b>Abstract</b>: {{page.talk.abstract}}<br/><br/></div>
-    {%- endif -%}  
-    {%- if page.talk.bio -%}
-      <div><b>Biography</b>: {{page.talk.bio}}<br/><br/></div>
-    {%- endif -%}
+  {%- if page.schedule -%}
+    {%- include custom/schedule.html schedule=page.schedule -%}  
+  {%- endif -%}
+  {%- if page.talk -%}
+    {%- include custom/talk.html talk=page.talk -%}
   {%- endif -%}
   
   {%- if page.photos -%}
