--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -3,7 +3,7 @@ layout: post
 ---
 
 <div>
-  {{page.description}}
+  {{page.description}}<br/><br/>  
   {%- if page.talk and page.talk.speaker_photo -%}
     <img height="300px" src="{{page.talk.speaker_photo}}"/><br/><br/>
   {%- endif -%}
