fix poster issue

--- a/_includes/custom/support.html
+++ b/_includes/custom/support.html
@@ -9,10 +9,8 @@
 
 VINCI brings together faculty members across various SFU departments and faculties to collaborate on research and education in the areas of visual computing, interactive computing, social implications, and domain-specific applications.  The institute’s goal is to spearhead innovations in visual computing (VC), artificial intelligence (AI), and human-computer interaction (HCI).
 
-We have a number of initiatives that can be supported through funding to VINCI.
-<br/>
-Support levels are: <b>S</b>ilver (1-10K); <b>G</b>old (10-100K); <b>P</b>latinum (100K+)
-
+If you are interested in supporting VINCI, please email <a href="mailto:vinci-directors@sfu.ca">vinci-directors@sfu.ca</a>.
+We have a number of initiatives that can be supported through funding to VINCI:
 <ul>
 <li><b>Meet & greet events</b>: mini-workshops with discussions and posters on topics within scope of VINCI, promoting socialization between institute membership, other SFU community members, industry, and government stakeholders.
 </li>
@@ -38,6 +36,4 @@ Support levels are: <b>S</b>ilver (1-10K); <b>G</b>old (10-100K); <b>P</b>latinu
 </li>
 <li><b>Space renovations & additions</b>: VINCI-affiliated lab space renovations and development of new spaces in existing or new buildings.
 </li>
-</ul>
-
-If you are interested in supporting VINCI, please email <a href="mailto:vinci-directors@sfu.ca">vinci-directors@sfu.ca</a>. 
+</ul> 
